--- a/src/Emphasis.TextDetection.Tests/Emphasis.TextDetection.Tests.csproj
+++ b/src/Emphasis.TextDetection.Tests/Emphasis.TextDetection.Tests.csproj
@@ -1,16 +1,39 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-
     <IsPackable>false</IsPackable>
+	<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
+
   <ItemGroup>
+    <PackageReference Include="Cloo.clSharp" Version="1.0.1" />
+    <PackageReference Include="Emgu.CV" Version="4.5.1.4349" />
+    <PackageReference Include="Emgu.CV.Bitmap" Version="4.5.1.4349" />
+    <PackageReference Include="Emgu.CV.runtime.windows" Version="4.5.1.4349" />
+    <PackageReference Include="Emphasis.ScreenCapture" Version="1.0.2" />
+    <PackageReference Include="Emphasis.ScreenCapture.Bitmap" Version="1.0.2" />
+    <PackageReference Include="Emphasis.ScreenCapture.Runtime.Windows.DXGI" Version="1.0.2" />
+    <PackageReference Include="Emphasis.ScreenCapture.Runtime.Windows.DXGI.Bitmap" Version="1.0.2" />
+    <PackageReference Include="FluentAssertions" Version="5.10.3" />
     <PackageReference Include="NUnit" Version="3.13.1" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.17.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
+    <PackageReference Include="SharpDX.Direct3D11" Version="4.2.0" />
+    <PackageReference Include="SharpDX.DXGI" Version="4.2.0" />
+    <PackageReference Include="SharpDX.Mathematics" Version="4.2.0" />
     <PackageReference Include="System.Drawing.Common" Version="5.0.2" />
+    <PackageReference Include="System.Resources.Extensions" Version="5.0.0" />
+  </ItemGroup>
+
+
+  <ItemGroup>
+    <ProjectReference Include="..\Emphasis.ComputerVision.Core\Emphasis.ComputerVision.Core.csproj" />
+    <ProjectReference Include="..\Emphasis.ComputerVision.Tests\Emphasis.ComputerVision.Tests.csproj" />
+    <ProjectReference Include="..\Emphasis.ComputerVision\Emphasis.ComputerVision.csproj" />
+    <ProjectReference Include="..\Emphasis.OpenCL\Emphasis.OpenCL.csproj" />
+    <ProjectReference Include="..\Emphasis.TextDetection\Emphasis.TextDetection.csproj" />
   </ItemGroup>
 
   <ItemGroup>
@@ -31,7 +54,7 @@
     <EmbeddedResource Update="samples\Samples.resx">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       <LastGenOutput>Samples.Designer.cs</LastGenOutput>
-      <Generator>ResXFileCodeGenerator</Generator>
+      <Generator>PublicResXFileCodeGenerator</Generator>
     </EmbeddedResource>
   </ItemGroup>
 
