--- a/src/Emphasis.TextDetection.Tests/Emphasis.TextDetection.Tests.csproj
+++ b/src/Emphasis.TextDetection.Tests/Emphasis.TextDetection.Tests.csproj
@@ -12,10 +12,12 @@
     <PackageReference Include="Emgu.CV" Version="4.5.1.4349" />
     <PackageReference Include="Emgu.CV.Bitmap" Version="4.5.1.4349" />
     <PackageReference Include="Emgu.CV.runtime.windows" Version="4.5.1.4349" />
-    <PackageReference Include="Emphasis.ScreenCapture" Version="1.0.2" />
-    <PackageReference Include="Emphasis.ScreenCapture.Bitmap" Version="1.0.2" />
-    <PackageReference Include="Emphasis.ScreenCapture.Runtime.Windows.DXGI" Version="1.0.2" />
-    <PackageReference Include="Emphasis.ScreenCapture.Runtime.Windows.DXGI.Bitmap" Version="1.0.2" />
+    <PackageReference Include="Emphasis.ScreenCapture" Version="1.0.4" />
+    <PackageReference Include="Emphasis.ScreenCapture.Bitmap" Version="1.0.4" />
+    <PackageReference Include="Emphasis.ScreenCapture.OpenCL" Version="1.0.4" />
+    <PackageReference Include="Emphasis.ScreenCapture.Runtime.Windows.DXGI" Version="1.0.4" />
+    <PackageReference Include="Emphasis.ScreenCapture.Runtime.Windows.DXGI.Bitmap" Version="1.0.4" />
+    <PackageReference Include="Emphasis.ScreenCapture.Runtime.Windows.DXGI.OpenCL" Version="1.0.4" />
     <PackageReference Include="FluentAssertions" Version="5.10.3" />
     <PackageReference Include="NUnit" Version="3.13.1" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.17.0" />
