--- a/src/Emphasis.TextDetection.Tests/Emphasis.TextDetection.Tests.csproj
+++ b/src/Emphasis.TextDetection.Tests/Emphasis.TextDetection.Tests.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Emgu.CV" Version="4.5.1.4349" />
     <PackageReference Include="Emgu.CV.Bitmap" Version="4.5.1.4349" />
     <PackageReference Include="Emgu.CV.runtime.windows" Version="4.5.1.4349" />
+    <PackageReference Include="Emphasis.Algorithms.IndexOf.OpenCL" Version="1.0.0" />
     <PackageReference Include="Emphasis.ScreenCapture" Version="1.0.5" />
     <PackageReference Include="Emphasis.ScreenCapture.Bitmap" Version="1.0.5" />
     <PackageReference Include="Emphasis.ScreenCapture.OpenCL" Version="1.0.5" />
